--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -19,9 +19,11 @@
           <li>
             <i class="fa fa-calendar"></i><%= @post_image.created_at.strftime('%Y/%m/%d') %>
           </li>
-          
           <li>
-<i class="fa fa-comment"></i><% if @post_image.favorited_by?(current_user) %>
+    <i class="fa fa-calendar"></i><%= @post_image.created_at.strftime('%Y/%m/%d') %>
+</li>
+<!-- ここから -->
+<% if @post_image.favorited_by?(current_user) %>
 <li>
     <%= link_to post_image_favorites_path(@post_image), method: :delete do %>
     <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
@@ -36,9 +38,14 @@
     <% end %>
 </li>
 <% end %>
+          <li>
+<i class="fa fa-comment"></i>
 <a href="#comments"><%= @post_image.post_comments.count %></a>
 </li>
-        </ul>
+<% if @post_image.user == current_user %>
+  <%= link_to "削除", post_image_path(@post_image), method: :delete %>
+<% end %>
+</ul>
         <div class="post-content-inner mt-20">
             <p><%= @post_image.caption %></p>
         </div>
